; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-ismt.c_ismt_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-ismt.c_ismt_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.ismt_priv = type { i32 }

@SMBBAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @ismt_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ismt_remove(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca %struct.ismt_priv*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = call %struct.ismt_priv* @pci_get_drvdata(%struct.pci_dev* %4)
  store %struct.ismt_priv* %5, %struct.ismt_priv** %3, align 8
  %6 = load %struct.ismt_priv*, %struct.ismt_priv** %3, align 8
  %7 = getelementptr inbounds %struct.ismt_priv, %struct.ismt_priv* %6, i32 0, i32 0
  %8 = call i32 @i2c_del_adapter(i32* %7)
  %9 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %10 = load i32, i32* @SMBBAR, align 4
  %11 = call i32 @pci_release_region(%struct.pci_dev* %9, i32 %10)
  ret void
}

declare dso_local %struct.ismt_priv* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local i32 @i2c_del_adapter(i32*) #1

declare dso_local i32 @pci_release_region(%struct.pci_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
